2005-10-03  Germain Garand  <germain@ebooksfrance.org>

        let the initial containing block be the Canvas, as mandated by latest
        draft of CSS 2.1 10.1.1

        * rendering/render_object.cpp (containingBlock, container): don't special case the Root, it's no more 
        an initial containing block.

        * rendering/render_block.{cpp,h} (*AbsolutePosition): separate calculation
        of positioned objects' contribution to the object's rightmost/lower/leftmost position. 

        * rendering/render_box.cpp (setStyle, containingBlockWidth): checking for isCanvas where applicable.

        * rendering/render_canvas.cpp (docWidth, docHeight):
        take into account absolutely positioned objects from the canvas itself.

2005-09-18  Allan Sandfeld Jensen <kde@carewolf.com>

        Implementation of real page-breaking algorithm respecting the CSS 2.1 specification.

        * khtmlview.cpp:
        Do layout for page-breaks before printing.
        Use screen resolution as default instead of 72DPI.
        * css/html4.css: Add the print media default styles
        * rendering/render_style.*: Add RenderPageStyle as the style for the page-context. Not yet used.
        * rendering/render_canvas.*:
        Separate paged and static properties of printing.
        Use rootHeight as pageHeight.
        Add RenderPage as the page-context(@page). Not yet used.
        * rendering/render_flow.*:
        (deleteLastLineBox) new function to remove the last line (in order to redo it).
        * rendering/render_line.*:
        (removeFromLine) ditto
        * rendering/bidi.cpp: New algorithm in layoutInlineChildren for doing page-breaks at layout-time,
        and respecting orphans/widows CSS settings.
        * rendering/render_block.cpp:
        (makePageBreakAvoidBlocks) Function for collecting runs of page-break-after/before: avoid blocks, so
        they can be moved across page-breaks collectively.